# setuptools_cuda

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: build-and-test-examples.yml  build-and-test.yml  build_and_test_examples.yml  quality_checks.yml
docs/: conf.py  index.rst
docs/source/: conf.py  creating_extensions.md  index.md  index.rst  manual.md
docs/source/examples/: example01_saxpy.md  example02_thrust.md  index.md
examples/: pyproject.toml  setup.py
examples/01_basic/: pyproject.toml  setup.py
examples/01_basic/saxpycu/: saxpy.pyx  saxpy_impl.cu  saxpy_impl.h
examples/01_basic/test/: test_saxpy.py
examples/02_thrust/: pyproject.toml  setup.py
examples/02_thrust/test/: test_thrustcu.py
examples/02_thrust/thrustcu/: thrustcu.pyx  thrustcu_impl.cu  thrustcu_impl.h
examples/saxpycu/ext/: saxpy.pyx  saxpy_impl.cu
setuptools_cuda/: __init__.py  build.py  compiler_customization.py  extension.py  inspections.py  setuptools_ext.py
